--- a/src/main/webapp/css/issueFormStyle.css
+++ b/src/main/webapp/css/issueFormStyle.css
@@ -4,25 +4,6 @@ body {
     padding: 20px;
 }
 
-.navbar {
-    background-color: #333;
-    overflow: hidden;
-}
-
-.navbar a {
-    float: left;
-    color: #fff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 16px;
-}
-
-.navbar a:hover {
-    background-color: #ddd;
-    color: #333;
-}
-
 /* Styling for the h1 heading */
 h1 {
     text-align: center;
@@ -85,8 +66,18 @@ select::-ms-expand {
 select {
     appearance: none;
     background: transparent;
-    background-image: url('path/to/your/select-icon.png');
     background-repeat: no-repeat;
     background-position: right center;
     padding-right: 25px;
+}
+
+.newButton {
+    float: right;
+    padding: 6px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #2196F3;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
 }
